--- a/Estilo.css
+++ b/Estilo.css
@@ -1,19 +1,42 @@
-body{
-   background-color: firebrick;
+*{
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: Arial, Helvetica, sans-serif;
+   text-transform: capitalize;
+   text-decoration: none;
 }
+
+body{
+   background-color: rgb(196, 33, 33);
+}
+
 header{
-   background-color: rgb(40, 40, 40);
-   width: 100%;
-   position: fixed;
-   z-index: 100;
-   color: white;
+ background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5))url(imag/Posts-IlBono-07.jpg);
+   background-position: center center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   height: 100vh;
    
 }
 
-.menu .navbar ul{
-   list-style: none;
-  
+.menu{
+position: absolute;
+top: 10px;
+left: 0px;
+right: 0px;
+display: flex;
+align-items: center;
+justify-content: space-between;
+z-index: 1000;
 }
+
+.menu.logo{
+   font-weight: bolder;
+   font-size: 25px;
+   color: rgb(70, 204, 70);
+}
+
 .menu .navbar ul li {
    position: relative;
    float: left;
@@ -21,30 +44,28 @@ header{
 
 .menu .navbar ul li a{
   
-     font-size: 18px;
+     font-size: 20px;
      padding: 20px;
      color: white;
      display: block;
 
 }
-#menu {
-   display: none;
 
-}
+
 .menu label{
    cursor: pointer;
    display: none;
 }
 
 header img{
-   width: 170px;
-   height: 140px;
+   width: 1100px;
+   height: 400px;
    margin: 0 auto;
 }
 div img {
-   width: 1000px;
-   height: 500px;
-   margin-top: 150px;
+   width: 400px;
+   height: 200px;
+   margin-top: 10px;
 }
 
 .container{
@@ -56,11 +77,29 @@ margin: 0 auto;
 .menu.logo{
    font-weight: bolder;
    font-size: 25px;
-   color: green;
+   color: darkgreen;
 }
 
+.menu .navbar ul{
+   list-style: none;
+}
+
+.menu .navbar ul li{
+   position: relative;
+   float: left;
+}
+
+
 .menu .navbar ul li a:hover{
-   color: aqua;
+   color:green;
+}
+
+#menu{
+   display: none;
+}
+.menu label{
+   cursor: pointer;
+   display: none;
 }
 
 .header text h1{
@@ -74,7 +113,7 @@ margin: 0 auto;
    margin-top: 35px;
    padding: 15px 25px;
    border-radius: 25px;
-   color: violet;
+   color: green;
 }
 
 .btn-1:hover{
@@ -96,5 +135,173 @@ margin-bottom: 25px;
 .txt-1{
 
    font-size: 18px;
-   
+
+}
+
+.group-services{
+   display: flex;
+ justify-content: space-between;
+
+}
+
+.service{
+   padding: 60pxpx 25px;
+}
+
+.service img{
+   width: 100px;
+   margin-bottom: 25px;
+
+}
+
+.service h3{
+   font-size: 18px;
+}
+
+.portafolio-txt{
+   margin-bottom: 35px;
+}
+
+.portafolio-txt h2{
+   font-size: 30px;
+   margin-bottom: 35px;
+}
+
+.portafolio-txt p{
+   font-size: 10px;
+}
+
+.imgs{
+   display: flex;
+   justify-content: center;
+}
+
+
+.bg-sec{
+   background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(imag/Posts-IlBono-07.jpg);
+   background-position: center center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-attachment: fixed;
+   margin: 40px 0px;
+}
+
+.bg-txt{
+   padding: 60px 0px;
+   text-align: center;
+   color: white;
+}
+
+.bg-txt h2{
+   font-size: 55px;
+   margin-bottom: 35px;
+
+}
+
+.bg.txt p{
+   font-size: 18px;
+   margin-bottom: 25px;
+}
+.princes{
+   padding: 50px 0px;
+   display: flex;
+   justify-content: space-between;
+   color: white;
+}
+
+.prince{
+   text-align: center;
+}
+
+.price h3{
+   font-size: 50px;
+   margin-bottom: 25px;
+}
+
+.princeul li{
+   font-size: 18px;
+}
+
+footer{
+   padding: 150px 0px;
+
+}
+
+
+.ft{
+   display: flex;
+   justify-content: space-between;
+}
+
+.enlace h3{
+   color: white;
+   font-size: 20px;
+   margin-bottom: 25px;
+
+}
+
+.enlace li {
+   list-style: none;
+}
+ 
+.enlace a{
+   color: white;
+   display: block;
+   margin-bottom: 15px;
+
+}
+
+.enlace form{
+   display: flex;
+   flex-direction: column;
+}
+
+.btn-2{
+   padding:  10px 25px;
+   border: 0px;
+}
+
+.btn-3{
+   background-color: aqua;
+   padding: 10px 25px;
+   border: 0px;
+   color: chocolate;
+   margin-top: 15px;
+}
+
+@media(max-width:991px){
+   .menu{
+      padding: 20px;
+
+   }
+   .menu label{
+      display: initial;
+
+   }
+
+   .menu .navbar{
+      position: absolute;
+      top: 100px;
+      left:0px;
+      right: 0px;
+      background-color: blueviolet;
+      display: none;
+
+
+   }
+
+   .menu .navbar ul li{
+      width: 100%;
+   }
+   .menu .navbar ul li a:hover{
+      color: white;
+   }
+
+   #menu:checked ∼ .navbar{
+      display: initial;
+
+   }
+   .menu-icono{
+      width: 25px;
+   }
 }
