--- a/Estilo.css
+++ b/Estilo.css
@@ -1,3 +1,4 @@
+
 *{
    margin: 0;
    padding: 0;
@@ -6,53 +7,29 @@
    text-transform: capitalize;
    text-decoration: none;
 }
-
 body{
-   background-color: rgb(196, 33, 33);
-}
-
-header{
- background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5))url(imag/Posts-IlBono-07.jpg);
-   background-position: center center;
-   background-repeat: no-repeat;
-   background-size: cover;
-   height: 100vh;
-   
-}
-
-.menu{
-position: absolute;
-top: 10px;
-left: 0px;
-right: 0px;
-display: flex;
-align-items: center;
-justify-content: space-between;
-z-index: 1000;}
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Ubuntu:wght@400;700&display=swap');
-
-
-*{
   
-}
-body {
-   background-color: firebrick;
-   font-family: Ubuntu;
-
-  }
-header {
-   background-color:rgb(40, 40, 40);
-   width: 100%;
-   position: fixed;
-   z-index: 3;
-   color: white;
-   top: 0;
-}
-nav {
-   float: right;
+  background-image: url(''); /* Ajusta la ruta  */
+  background-image: cover; /* Ajusta el tamaño de la imagen */
+  background-position: center; /* Centra la imagen */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  height: 80vh; /* Asegúrate de que el body ocupe toda la altura de la ventana */
+  margin: 0; /* Elimina el margen por defecto */
 }
 
+
+  
+
+  .menu{
+   position: absolute;
+   top: 10px;
+   left: 0px;
+   right: 0px;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   z-index: 1000;
+   }
 .menu.logo{
    font-weight: bolder;
    font-size: 25px;
@@ -66,9 +43,9 @@ nav {
 
 .menu .navbar ul li a{
   
-     font-size: 20px;
+     font-size: 15px;
      padding: 20px;
-     color: white;
+     color:white;
      display: block;
 
 }
@@ -84,18 +61,18 @@ header img{
    height: 400px;
    margin: 0 auto;
 }
+
 div img {
    width: 400px;
    height: 200px;
    margin-top: 10px;
 }
-
 .container{
-max-width: 1100px;
-margin: 0 auto;
-
-}
-
+   max-width: 1100px;
+   margin: 0 auto;
+   
+   }
+   
 .menu.logo{
    font-weight: bolder;
    font-size: 25px;
@@ -291,40 +268,81 @@ footer{
    margin-top: 15px;
 }
 
+@media(max-width:991px){
+   .menu{
+      padding: 20px;
 
- 
+   }
+   .menu label{
+      display: initial;
+
+   }
+
+   .menu .navbar{
+      position: absolute;
+      top: 100px;
+      left:0px;
+      right: 0px;
+      background-color: blueviolet;
+      display: none;
+
+
+   }
+
+   .menu .navbar ul li{
+      width: 100%;
+   }
+   .menu .navbar ul li a:hover{
+      color: white;
+   }
+
+   #menu:checked ∼ .navbar{
+      display: initial;
+
+   }
    .menu-icono{
       width: 25px;
    }
-.bienv img {
-   width: 1000px;
-   height: 500px;
-   
-   float: left;
 }
 
-.bienv::after {
-   content:"";
-   clear: both;
-   display: table;
+
+
+.carrusel {
+ 
+ max-width: 1200px;
+   margin: auto;
+   overflow: hidden;
+   background-position: cover;
 }
-.bienv{
-   background-color: white;
-   font-size: 85px;
-   margin-top: 150px;
-   font-family: Ubuntu;
-   font-weight: 700;
-}
-.nosot {
+
+.carrusel-contenido {
    display: flex;
-   justify-content: space-around;
-   padding: 20px;
+   transition: transform 0.5s ease;
+  
 }
-.columna {
-   background-color: #fff;
-   border: 1px solid #ccc;
-   border-radius: 5px;
-   padding: 20px;
-   width: 30%;
-   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+.carrusel-contenido img {
+   width: 100%;
+    height: 300px;
+    object-fit: cover;
+    
+}
+
+button {
+   position: absolute;
+   top: 50%;
+   transform: translateY(-50%);
+   background-color: rgba(0, 0, 0, 0.5);
+   color: white;
+   border: none;
+   padding: 10px;
+   cursor: pointer;
+}
+
+.prev {
+   left: 10px;
+}
+
+.next {
+   right: 10px;
 }
