--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family?=Poppins:wght@400,500,600,700,800&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family?=Poppins:wght@400,500,600,700,800&display=swap');
 
 *{
     margin: 0;
@@ -9,8 +9,8 @@
     list-style: none;
 }
 body{
-    font-family:'Poppins' ,sans-serif ;
-background-color: black;
+    font-family: 'Poppins', sans-serif;
+    background-color: black;
 }
 img{
     max-width: 100%;
@@ -26,18 +26,17 @@ img{
     background-size: cover;
     display: flex;
     align-items: center;
-    min-height: 80hv;
+    min-height: 80vh;
     padding: 80px 0;
 }
-
 .menu{
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+display: flex;
+align-items: center;
+justify-content: space-between;
 }
 .logo{
     color: chocolate;
@@ -50,15 +49,16 @@ img{
     float: left;
 }
 .menu .navbar ul li a{
-font-size: 10px;
-padding: 20px;
-color: aliceblue;
-font-weight: 600;
-display: block;
+    font-size: 20;
+    padding: 25px;
+    color: aliceblue;
+    font-weight: 600;
+    display: block
 }
 .menu .navbar ul li a:hover{
     color: chocolate;
 }
+
 #menu{
     display: none;
 }
@@ -69,41 +69,236 @@ display: block;
     cursor: pointer;
     display: none;
 }
-
 .header-content{
-    display: flex;
-}
-.header-txt{
-    flex-basis: 50%;
-}
-.header-txt h1{
-    font-size: 60px;
-    color: aliceblue;
-    line-height: 1.3;
-    margin-bottom: 25px;
-}
-.header-txt span{
-    color: rgb(238, 107, 12);
-}
-.header-txt p{
+    display:flex;
+    }
+    .header-txt{
+        flex-basis: 50%;
+    }
+    .header-txt h1{
+        font-size: 60px;
+        color: aliceblue;
+        line-height: 1.3;
+        margin-bottom: 25px;
+    }
+    .header-txt span{
+        color: rgb(238, 107, 12);
+    }
+    .header-txt p{
+        font-size: 17px;
+        color: darkgray;
+        margin-bottom: 45px;
+    
+    }
+    .butons{
+        display: flex;
+    }
+    .btn-1, .btn-2, .btn-3{
+    display: inline-block;
+    padding: 11px 35px;
+    border: 2px solid coral;
+    border-radius: 25px;
+    margin-right: 25px;
     font-size: 17px;
-    color: darkgray;
-    margin-bottom: 45px;
-
-}
-.butons{
-    display: flex;
-}
-.btn-1 .btn-2 .btn-3{
-display: inline-block;
-padding: 11px 35px;
-border: 2px solid coral;
-border-radius: 25px;
-margin-right: 25px;
-font-size: 17px;
-color: beige;
-}
-.btn-1:hover{
-   background-color: coral;
-}
-
+    color: beige;
+    }
+    .btn-1:hover{
+       background-color: coral;
+    }
+    
+    .popular{
+        padding: 100px 0;
+        text-align: center;
+    }
+    h2{
+        color: darkgrey;
+        font-size: 35px;
+        margin-bottom: 45px;
+    }
+     .popular-content{
+        display: flex;
+        justify-content: space-between;
+     }
+    
+     .popular-content img{
+        width: 150px;
+     }
+     .product-content{
+        display: grid;
+       grid-template-columns: repeat(3, 1fr);
+       gap: 50px;
+     }
+     .product-1{
+        background-color: rgb(45, 52, 59);
+     }
+     .product-txt{
+        padding: 50px  30px;
+     }
+    
+     h3{
+        font-size: 20px;
+        color: aliceblue;
+        margin-bottom: 20px;
+     }
+    
+     .price{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+     }
+    
+     .price p{
+     font-size: 17px;
+     color: coral;
+     }
+     .btn-2{
+        padding: 5px 25px;
+        background-color: chocolate;
+        margin-right: 0;
+     }
+    
+     .contact{
+        padding: 150px 100px;
+     }
+     .contact-content{
+        background-color: rgb(71, 79, 79);
+        text-align: center;
+        padding: 50px;
+        border-radius: 50px;
+     }
+     form{
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+     }
+     input{
+        padding: 18px 25px;
+        background-color: rgb(184, 179, 189);
+        border: 0;
+        border-radius: 25px;
+        outline: none;
+        margin-right: 10px;
+        color: aliceblue;
+        font-size: 17px;
+     }
+     ::placeholder{
+        color: rgb(227, 233, 220);
+        font-size: 17px;
+     }
+     .btn-3{
+        background-color: coral;
+        cursor: pointer;
+        margin-right: 0;
+     }
+     .footer{
+        display:flex ;
+        justify-content: space-between;
+        align-items: center;
+        padding: 50px 0;
+     }
+    
+     .link ul{
+        display: flex;
+     }
+    
+     .link ul li > a{
+        font-size: 17px;
+        color: aliceblue;
+        margin-right: 20px;
+     }
+    
+     .link ul li > a:hover{
+        color: coral;
+     }
+    @media(max-width:991px){
+    
+        .menu{
+            padding :20px;
+        }
+    
+        .menu label{
+            display:initial;
+        }
+        .menu .navbar{
+            position: absolute;
+            top: 100%;
+            left:0;
+            right: 0;
+            background-color: coral;
+            display: none;
+        }
+        .menu .navbar ul li a:hover{
+            color: black;
+        }
+        .menu .navbar ul li {
+            width:100%;
+        }
+    #menu:checked ∼.navbar{
+        display: initial;
+    }
+    
+    .header{
+        min-height: 0vh;
+        padding: 80px 30px 50px 30px;
+    }
+    
+    .header-txt{
+        text-align: center;
+        flex-basis: 100%;
+    }
+    
+    .header-txt h1{
+        font-size: 50px;
+        margin-bottom: 15px;
+    }
+    
+    .butons{
+        justify-content: center;
+    }
+    
+    .btn-1:last-of-type{
+        margin-right: 0px;
+    }
+    
+    .popular{
+        display: none;
+    }
+    
+    .product{
+        padding: 30px;
+    }
+    
+    .product-content{
+        grid-template-columns: repeat(1,1fr);
+        gap: 30px;
+    }
+    
+    .product-1img{
+        width: 100%;
+    }
+    
+    .contact{
+        padding: 30px;
+    }
+    
+    form{
+        flex-direction: column;
+    }
+    
+    input{
+        margin: 0 0 20px 0;
+    }
+    .footer{
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    .link ul{
+        margin-top: 20px;
+    
+    }
+    
+    }
+    
+    
+    
