--- a/style.css
+++ b/style.css
@@ -10,37 +10,37 @@
 }
 body{
     font-family: 'Poppins', sans-serif;
-    background-color: black;
+    background-color: rgb(247, 247, 247);
 }
 img{
     max-width: 100%;
 }
 .container{
-    max-width: 1200px;
+    max-width:1200px;
     margin: 0 auto;
 }
 .header{
-    background-image: url(imagenes/bg.jpg);
+    background-image: url(imagenes/menu1.webp);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     align-items: center;
-    min-height: 80vh;
-    padding: 80px 0;
+    min-height: 100hv;
+    padding: 260px 0;
 }
 .menu{
-position: absolute;
-top: 0;
-left: 0;
-right: 0;
-display: flex;
-align-items: center;
-justify-content: space-between;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .logo{
-    color: chocolate;
-    font-size: 25px;
+   color: rgb(32, 45, 222);
+    font-size: 10px;
     font-weight: 800;
     text-transform: uppercase;
 }
@@ -49,16 +49,15 @@ justify-content: space-between;
     float: left;
 }
 .menu .navbar ul li a{
-    font-size: 20;
-    padding: 25px;
-    color: aliceblue;
-    font-weight: 600;
-    display: block
+font-size: 20px;
+padding: 25px;
+color: rgb(9, 9, 172);
+font-weight: 600;
+display: block;
 }
 .menu .navbar ul li a:hover{
-    color: chocolate;
+    color: rgb(14, 15, 14);
 }
-
 #menu{
     display: none;
 }
@@ -69,236 +68,321 @@ justify-content: space-between;
     cursor: pointer;
     display: none;
 }
+
 .header-content{
-    display:flex;
-    }
-    .header-txt{
-        flex-basis: 50%;
-    }
-    .header-txt h1{
-        font-size: 60px;
-        color: aliceblue;
-        line-height: 1.3;
-        margin-bottom: 25px;
-    }
-    .header-txt span{
-        color: rgb(238, 107, 12);
-    }
-    .header-txt p{
-        font-size: 17px;
-        color: darkgray;
-        margin-bottom: 45px;
-    
-    }
-    .butons{
-        display: flex;
-    }
-    .btn-1, .btn-2, .btn-3{
-    display: inline-block;
-    padding: 11px 35px;
-    border: 2px solid coral;
-    border-radius: 25px;
-    margin-right: 25px;
+display:flex;
+}
+
+ 
+.header-txt{
+    flex-basis: 50%;
+}
+.header-txt h1{
+    font-size: 60px;
+    color: rgb(11, 11, 11);
+    line-height: 1.3;
+    margin-bottom: 25px;
+}
+.header-txt span{
+    color: rgb(60, 225, 65);
+}
+.header-txt p{
     font-size: 17px;
-    color: beige;
+    color: rgb(17, 17, 17);
+    margin-bottom: 45px;
+
+}
+.butons{
+    display: flex;
+}
+.btn-1, .btn-2, .btn-3{
+display: inline-block;
+padding: 11px 35px;
+border: 2px solid rgb(18, 78, 135);
+border-radius: 25px;
+margin-right: 25px;
+font-size: 17px;
+color: rgb(25, 97, 180);
+}
+.btn-1:hover{
+   background-color: rgb(16, 17, 16);
+}
+
+.popular{
+    padding: 100px 0;
+    text-align: center;
+}
+h2{
+    color: rgb(34, 88, 159);
+    font-size: 35px;
+    margin-bottom: 45px;
+}
+ .popular-content{
+    display: flex;
+    justify-content: space-between;
+ }
+
+ .popular-content img{
+    width: 150px;
+ }
+ .product-content{
+    display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   gap: 50px;
+ }
+ .product-1{
+    background-color: rgb(207, 203, 199);
+ }
+
+ .product-txt{
+    padding: 50px  30px;
+ }
+
+ h3{
+    font-size: 20px;
+    color: rgb(10, 10, 10);
+    margin-bottom: 20px;
+ }
+
+ .price{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ }
+
+ .price p{
+ font-size: 17px;
+ color: rgb(10, 44, 4);
+ }
+
+ .btn-2{
+    padding: 5px 25px;
+    background-color: rgb(7, 7, 7);
+    margin-right: 0;
+ }
+
+ .contact{
+    padding: 150px 100px;
+ }
+ .contact-content{
+    background-color: rgb(141, 156, 177);
+    text-align: center;
+    padding: 50px;
+    border-radius: 50px;
+ }
+ form{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+ }
+ input{
+    padding: 18px 25px;
+    background-color: rgb(241, 236, 245);
+    border: 0;
+    border-radius: 25px;
+    outline: none;
+    margin-right: 10px;
+    color: rgb(55, 79, 129);
+    font-size: 17px;
+ }
+ ::placeholder{
+    color: rgb(21, 21, 21);
+    font-size: 17px;
+ }
+ .btn-3{
+    background-color: rgb(13, 14, 13);
+    cursor: pointer;
+    margin-right: 0;
+ }
+ .footer{
+    display:flex ;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 0;
+ }
+
+ .link ul{
+    display: flex;
+ }
+
+ .link ul li > a{
+    font-size: 17px;
+    color: rgb(17, 17, 17);
+    margin-right: 20px;
+ }
+
+ .link ul li > a:hover{
+    color: rgb(24, 60, 142);
+ }
+@media(max-width:991px){
+
+    .menu{
+        padding :20px;
     }
-    .btn-1:hover{
-       background-color: coral;
+
+    .menu label{
+        display:initial;
     }
-    
-    .popular{
-        padding: 100px 0;
-        text-align: center;
-    }
-    h2{
-        color: darkgrey;
-        font-size: 35px;
-        margin-bottom: 45px;
-    }
-     .popular-content{
-        display: flex;
-        justify-content: space-between;
-     }
-    
-     .popular-content img{
-        width: 150px;
-     }
-     .product-content{
-        display: grid;
-       grid-template-columns: repeat(3, 1fr);
-       gap: 50px;
-     }
-     .product-1{
-        background-color: rgb(45, 52, 59);
-     }
-     .product-txt{
-        padding: 50px  30px;
-     }
-    
-     h3{
-        font-size: 20px;
-        color: aliceblue;
-        margin-bottom: 20px;
-     }
-    
-     .price{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-     }
-    
-     .price p{
-     font-size: 17px;
-     color: coral;
-     }
-     .btn-2{
-        padding: 5px 25px;
-        background-color: chocolate;
-        margin-right: 0;
-     }
-    
-     .contact{
-        padding: 150px 100px;
-     }
-     .contact-content{
-        background-color: rgb(71, 79, 79);
-        text-align: center;
-        padding: 50px;
-        border-radius: 50px;
-     }
-     form{
-        display: flex;
-        justify-content: center;
-        margin-top: 20px;
-     }
-     input{
-        padding: 18px 25px;
-        background-color: rgb(184, 179, 189);
-        border: 0;
-        border-radius: 25px;
-        outline: none;
-        margin-right: 10px;
-        color: aliceblue;
-        font-size: 17px;
-     }
-     ::placeholder{
-        color: rgb(227, 233, 220);
-        font-size: 17px;
-     }
-     .btn-3{
-        background-color: coral;
-        cursor: pointer;
-        margin-right: 0;
-     }
-     .footer{
-        display:flex ;
-        justify-content: space-between;
-        align-items: center;
-        padding: 50px 0;
-     }
-    
-     .link ul{
-        display: flex;
-     }
-    
-     .link ul li > a{
-        font-size: 17px;
-        color: aliceblue;
-        margin-right: 20px;
-     }
-    
-     .link ul li > a:hover{
-        color: coral;
-     }
-    @media(max-width:991px){
-    
-        .menu{
-            padding :20px;
-        }
-    
-        .menu label{
-            display:initial;
-        }
-        .menu .navbar{
-            position: absolute;
-            top: 100%;
-            left:0;
-            right: 0;
-            background-color: coral;
-            display: none;
-        }
-        .menu .navbar ul li a:hover{
-            color: black;
-        }
-        .menu .navbar ul li {
-            width:100%;
-        }
-    #menu:checked ∼.navbar{
-        display: initial;
-    }
-    
-    .header{
-        min-height: 0vh;
-        padding: 80px 30px 50px 30px;
-    }
-    
-    .header-txt{
-        text-align: center;
-        flex-basis: 100%;
-    }
-    
-    .header-txt h1{
-        font-size: 50px;
-        margin-bottom: 15px;
-    }
-    
-    .butons{
-        justify-content: center;
-    }
-    
-    .btn-1:last-of-type{
-        margin-right: 0px;
-    }
-    
-    .popular{
+    .menu .navbar{
+        position: absolute;
+        top: 100%;
+        left:0;
+        right: 0;
+        background-color: rgb(120, 107, 107);
         display: none;
     }
-    
-    .product{
-        padding: 30px;
+    .menu .navbar ul li a:hover{
+        color: rgb(19, 22, 159);
     }
-    
-    .product-content{
-        grid-template-columns: repeat(1,1fr);
-        gap: 30px;
+    .menu .navbar ul li {
+        width:100%;
     }
-    
-    .product-1img{
-        width: 100%;
-    }
-    
-    .contact{
-        padding: 30px;
-    }
-    
-    form{
-        flex-direction: column;
-    }
-    
-    input{
-        margin: 0 0 20px 0;
-    }
-    .footer{
-        flex-direction: column;
-        text-align: center;
-    }
-    
-    .link ul{
-        margin-top: 20px;
-    
-    }
-    
-    }
-    
-    
-    
+#menu:checked ∼.navbar{
+    display: initial;
+}
+
+.header{
+    min-height: 0vh;
+    padding: 80px 30px 50px 30px;
+}
+
+.header-txt{
+    text-align: center;
+    flex-basis: 100%;
+}
+
+.header-txt h1{
+    font-size: 50px;
+    margin-bottom: 15px;
+}
+
+.butons{
+    justify-content: center;
+}
+
+.btn-1:last-of-type{
+    margin-right: 0px;
+}
+
+.popular{
+    display: none;
+}
+
+.product{
+    padding: 30px;
+}
+
+.product-content{
+    grid-template-columns: repeat(1,1fr);
+    gap: 30px;
+}
+
+.product-1img{
+    width: 100%;
+    height: auto;
+}
+
+.contact{
+    padding: 30px;
+}
+
+form{
+    flex-direction: column;
+}
+
+input{
+    margin: 0 0 20px 0;
+}
+.footer{
+    flex-direction: column;
+    text-align: center;
+}
+
+.link ul{
+    margin-top: 20px;
+
+}
+
+}
+
+
+.carrusel-container {
+    position: relative;
+    width: 100%;
+    max-width: 1200px;
+    margin: 90px auto;
+    overflow: hidden; /* Hace que las imágenes fuera de la vista sean invisibles */
+}
+
+/* Contenedor del carrusel */
+.carrusel {
+    position: relative;
+    width: 100%;
+    height: 485px; /* Ajusta la altura al tamaño que quieras */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Contenedor de las imágenes */
+.carrusel-content {
+    display: flex;
+    transition: transform 0.5s ease-in-out; /* Desplazamiento suave de las imágenes */
+    width: 100%;
+}
+
+/* Estilo de las imágenes */
+.carrusel-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Hace que las imágenes cubran el área */
+}
+
+/* Botones de navegación */
+button {
+    position: absolute;
+    top: 50%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 2em;
+    border: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    z-index: 2;
+    transform: translateY(-50%);
+}
+
+button:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.prev {
+    left: 10px; /* Botón anterior a la izquierda */
+}
+
+.next {
+    right: 10px; /* Botón siguiente a la derecha */
+}
+
+.bg-sec{
+    background-image: linear-gradient(rgba(83, 81, 81, 0.6) ,rgba(0, 0, 0, 0.5)),url(imagenes/carrusel6.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    margin: 60px 0px;
+}
+.bg-txt{
+    padding: 100px 0px;
+    text-align: center;
+    font-size: 20px;
+}
+.bg-txt h2{
+    font-size: 55px;
+    margin-bottom: 35px;
+}
